<?xml version="1.0"?>
<package>
  <name>GameController</name>
  <version>0.1.0</version>
  <description>The GameController package</description>

  <maintainer email="b51live@gmail.com">b51</maintainer>

  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>ikid_msgs</build_depend>
  <build_depend>Config</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>ikid_msgs</run_depend>
  <run_depend>Config</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
