<?xml version="1.0"?>
<package format="2">
  <name>GameController</name>
  <version>0.1.0</version>
  <description>The GameController package</description>

  <maintainer email="b51live@gmail.com">b51</maintainer>

  <license>MIT</license>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>GoogleDeps</build_depend>
  <build_depend>Shm</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>Shm</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
